--- a/FilmProject/src/main/resources/static/index.html
+++ b/FilmProject/src/main/resources/static/index.html
@@ -5,6 +5,13 @@
 <meta name="viewport"
 	content="width=device-width,initial-scale=1,user-scalable=no">
 <title>Lambda Movies</title>
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5343769809155926",
+    enable_page_level_ads: true
+  });
+</script>
 <link rel="shortcut icon" href="">
 <link rel="stylesheet" type="text/css"
 	href="/3dParty/bootstrap/css/bootstrap.min.css">
