--- a/FilmProject/src/main/resources/static/index.html
+++ b/FilmProject/src/main/resources/static/index.html
@@ -48,8 +48,7 @@
 									href="" ui-sref="reservations"><span>Mes réservations</span></a></li>
 								<li class="section" id="propositions" ng-show="isGerant()"><a
 									href="#"><span>Mes propositions</span></a></li>
-								<li class="section" id="a_propos"><a href="" ui-sref="nous"><span>A
-											propos de nous</span></a></li>
+								<li class="section" id="a_propos"><a href="" ui-sref="nous"><span>The Ultimate App Store List</span></a></li>
 								<li class="loginmenu section" id="login" ng-hide="isConnected()"><a
 									href="" ui-sref="login"><span>Connexion</span></a></li>
 
